Revamp grouped products UI (wip)

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
@@ -674,6 +674,7 @@ $pd-offer-spacing:              $grid-gutter-width / 2;
 .pd-assoc-attr {
     @extend .text-truncate;
     font-size: $font-size-sm;
+    text-align: center;
     //width: 100%;
 }
 
