Resolves #1127 Display reward points in product detail

--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/Catalog.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/Catalog.cshtml
@@ -648,6 +648,15 @@
                         <span asp-validation-for="ShowProductTags"></span>
                     </div>
                 </div>
+                <div class="adminRow">
+                    <div class="adminTitle">
+                        <smart-label asp-for="ShowRewardPointsInProductDetail" />
+                    </div>
+                    <div class="adminData">
+                        <setting-editor asp-for="ShowRewardPointsInProductDetail"></setting-editor>
+                        <span asp-validation-for="ShowRewardPointsInProductDetail"></span>
+                    </div>
+                </div>
 
                 <div class="adminRow">
                     <div class="admin-config-group">
