--- a/src/Smartstore.Web/Views/Product/Product.cshtml
+++ b/src/Smartstore.Web/Views/Product/Product.cshtml
@@ -93,7 +93,24 @@
                 <section sm-if="Model.ProductType == ProductType.GroupedProduct" class="pd-section pd-section-variants">
                     @if (Model.GroupedProduct?.Products?.Count > 0)
                     {
-                        <partial name="Product.AssociatedProducts.Search" model="Model.GroupedProduct" />
+                        <div class="row mb-2">
+                            @if (Model.GroupedProduct.AssociatedProductsTitle.HasValue())
+                            {
+                                // TODO: (mg) make responsive (wrap columns on mobile).
+                                <div class="col-8 align-content-center">
+                                    <h3 class="pd-assoc-list-title mb-0">@Model.GroupedProduct.AssociatedProductsTitle</h3>
+                                </div>
+                                <div class="col-4">
+                                    <partial name="Product.AssociatedProducts.Search" model="Model.GroupedProduct" />
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="col-12 col-lg-6 col-xxl-4">
+                                    <partial name="Product.AssociatedProducts.Search" model="Model.GroupedProduct" />
+                                </div>
+                            }
+                        </div>
                         <partial name="Product.AssociatedProducts" model="Model.GroupedProduct" />
                     }
                     else
