--- a/src/Smartstore.Web/Areas/Admin/Views/Setting/Catalog.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Setting/Catalog.cshtml
@@ -648,6 +648,8 @@
                         <span asp-validation-for="ShowProductTags"></span>
                     </div>
                 </div>
+                @* TODO: (mg) Consolidate: This settings belongs to "Reward Points" settings page, alongside other reward points related settings. *@
+                @* TODO: (mg) That's not what was asked for. We also have to show off the points for the purchase amount. *@
                 <div class="adminRow">
                     <div class="adminTitle">
                         <smart-label asp-for="ShowRewardPointsInProductDetail" />
