--- a/src/Smartstore.Web/Views/Product/Product.cshtml
+++ b/src/Smartstore.Web/Views/Product/Product.cshtml
@@ -93,14 +93,13 @@
                 <section sm-if="Model.ProductType == ProductType.GroupedProduct" class="pd-section pd-section-variants">
                     @if (Model.GroupedProduct?.Products?.Count > 0)
                     {
-                        <div class="row mb-2">
+                        <div class="row mb-2 row-gap-2 align-items-center">
                             @if (Model.GroupedProduct.AssociatedProductsTitle.HasValue())
                             {
-                                // TODO: (mg) make responsive (wrap columns on mobile).
-                                <div class="col-8 align-content-center">
+                                <div class="col-12 col-lg-6">
                                     <h3 class="pd-assoc-list-title mb-0">@Model.GroupedProduct.AssociatedProductsTitle</h3>
                                 </div>
-                                <div class="col-4">
+                                <div class="col-12 col-lg-6">
                                     <partial name="Product.AssociatedProducts.Search" model="Model.GroupedProduct" />
                                 </div>
                             }
