Reward points review

--- a/src/Smartstore.Web/Views/Product/Partials/Product.Offer.Price.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.Offer.Price.cshtml
@@ -113,8 +113,11 @@
             </div>
         </div>
         <div sm-if="priceModel.Reward != null" class="pd-group">
-            <div class="pd-review-amount alert alert-success fs-sm py-2 w-100">
-                @Html.Raw(T("RewardPoints.Message.RewardPointsForProductPurchase", priceModel.Reward.Points, priceModel.Reward.Amount.ToString()))
+            <div class="pd-review-amount text-success">
+                <span class="badge bg-success rounded-circle mr-1" style="width: 28px; height: 28px; --badge-font-size: 1em">
+                    <i class="fa fa-award text-white opacity-100"></i>
+                </span>
+                <span class="fs-sm">@Html.Raw(T("RewardPoints.Message.RewardPointsForProductPurchase", priceModel.Reward.Points, priceModel.Reward.Amount.ToString()))</span>
             </div>
         </div>
     }
