Fixed NullReferenceException in WidgetZone preview component

--- a/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.DevTools/Views/Shared/Components/WidgetZone/Default.cshtml
@@ -1,7 +1,10 @@
 ﻿@using Smartstore.Core.Widgets
 
 @{
-    var zone = ViewData["widgetzone"] as IWidgetZone;
+    if (ViewData["widgetzone"] is not IWidgetZone zone)
+    {
+        return;
+    }
 }
 
 @if (zone.PreviewTagName == "meta")
