--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -151,6 +151,9 @@
             <span asp-validation-for="ProductTypeId"></span>
         </div>
     </div>
+
+    @*<partial name="GroupedProductConfiguration" model="Model.GroupedProductConfiguration" />*@
+
     <div id="grouped-product-config">
         <div class="adminRow">
             <div class="adminTitle">
@@ -202,6 +205,7 @@
             </div>
         </div>
     </div>
+
     <div sm-if="Model.Id > 0 && Model.AssociatedToProductId > 0" class="adminRow">
         <div class="adminTitle">
             <smart-label asp-for="AssociatedToProductName" />
