--- a/src/Smartstore.Web/Areas/Admin/Views/Shared/Layouts/_AdminLayout.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shared/Layouts/_AdminLayout.cshtml
@@ -1,5 +1,4 @@
 ﻿@* Please keep in mind that this layout view is also referenced and used by modules! *@
-@using Smartstore.Core.Logging;
 
 @{
     Layout = "_AdminRoot";
@@ -7,14 +6,21 @@
 
 @if (ViewBag.RefreshPage == true)
 {
+    var btnId = (string)ViewBag.btnId;
     <script>
-		try {
-			window.parent.document.forms['@(ViewBag.formId)'].@(ViewBag.btnId).click();
-		}
-		catch (e) {
-			try { window.parent.document.getElementById('@(ViewBag.btnId)').click(); }
-			catch (e2) { }
-		}
+        @if (btnId.HasValue())
+        {<text>
+            try {
+                window.parent.document.forms['@(ViewBag.formId)'].@(btnId).click();
+            }
+            catch (e) {
+                try {
+                    window.parent.document.getElementById('@(btnId)').click();
+                }
+                catch (e2) {
+                }
+            }
+        </text>}
 
 		@if (!(ViewBag.CloseWindow == false))
 		{
