--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -156,7 +156,7 @@
                 </div>
                 <div id="product-type-config" class="col-auto">
                     <button id="btn-edit-product-type" type="button" class="btn btn-secondary">
-                        <span>@T("Admin.Common.Edit")&hellip;</span>
+                        <span>@T("Admin.Common.Settings")&hellip;</span>
                     </button>
                 </div>
             </div>
